; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_cf-lexer.c_cf_adderror.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_cf-lexer.c_cf_adderror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cf_preprocessor = type { i32 }
%struct.cf_token = type { i32 }

@LEX_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cf_preprocessor*, %struct.cf_token*, i8*, i8*, i8*, i8*)* @cf_adderror to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cf_adderror(%struct.cf_preprocessor* %0, %struct.cf_token* %1, i8* %2, i8* %3, i8* %4, i8* %5) #0 {
  %7 = alloca %struct.cf_preprocessor*, align 8
  %8 = alloca %struct.cf_token*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  store %struct.cf_preprocessor* %0, %struct.cf_preprocessor** %7, align 8
  store %struct.cf_token* %1, %struct.cf_token** %8, align 8
  store i8* %2, i8** %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  store i8* %5, i8** %12, align 8
  %13 = load %struct.cf_preprocessor*, %struct.cf_preprocessor** %7, align 8
  %14 = load %struct.cf_token*, %struct.cf_token** %8, align 8
  %15 = load i8*, i8** %9, align 8
  %16 = load i32, i32* @LEX_ERROR, align 4
  %17 = load i8*, i8** %10, align 8
  %18 = load i8*, i8** %11, align 8
  %19 = load i8*, i8** %12, align 8
  %20 = call i32 @cf_addew(%struct.cf_preprocessor* %13, %struct.cf_token* %14, i8* %15, i32 %16, i8* %17, i8* %18, i8* %19)
  ret void
}

declare dso_local i32 @cf_addew(%struct.cf_preprocessor*, %struct.cf_token*, i8*, i32, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
